--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "font-awesome": "^4.7.0",
-        "react-owl-carousel": "^2.3.3"
+        "react-owl-carousel": "^2.3.3",
+        "react-router-dom": "^6.28.1"
     }
 }
